# Tracking-Solov2-Deepsort

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  build_model.cpp  main.cpp  parameters.cpp  parameters.h  tracking.cpp  utils.cpp  utils.h
InstanceSegment/: ErrorRecorder.h  buffer.cpp  buffer.h  common.h  half.h  infer.cpp  infer.h  logger.cpp  logger.h  logging.h  pipeline.cpp  pipeline.h  solo.cpp  solo.h
InstanceTracking/: DeepSORT.cpp  DeepSORT.h  Extractor.cpp  Extractor.h  Hungarian.cpp  Hungarian.h  KalmanTracker.cpp  KalmanTracker.h  Track.h  TrackerManager.cpp  TrackerManager.h
InstanceTracking/reid_models/: car_reid_net.cpp  car_reid_net.h  people_reid_net.cpp  people_reid_net.h  trace_reid_net.cpp  trace_reid_net.h
config/: config.yaml
scripts/: conv_model_format.py  onnx_exporter.py
